[package]
name = "audit_script"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.4"
deno_doc = { version = "=0.183.0", features = ["comrak"] }
deno_ast = { version = "0.50.2", features = ["view"] }
deno_graph = "=0.100.1"
deno_semver = "0.9.0"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
owo-colors = "4"
futures = "0.3"
async-trait = "0.1"
deno_error = "0.7.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
