[package]
name = "audit_script"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "jsr-doc-audit"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:env_logger", "dep:owo-colors"]

[dependencies]
anyhow = "1"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.4"
deno_doc = "=0.183.0"
deno_ast = { version = "0.50.2", features = ["view"] }
deno_graph = "=0.100.1"
deno_semver = "0.9.0"
futures = "0.3"
async-trait = "0.1"
deno_error = "0.7.0"
log = "0.4"

# CLI-only dependencies
clap = { version = "4", features = ["derive", "env"], optional = true }
owo-colors = { version = "4", optional = true }
env_logger = { version = "0.11", optional = true }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }
